--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -90,8 +90,7 @@
                                                                 class="section-title center-align"
                                                             >
                                                                 <h2>
-                                                                    Log Into
-                                                                 Your GTPSID
+                                                                    Welcome To SecretPS
                                                                 </h2>
 
                                                             </div>
@@ -121,7 +120,7 @@
                                                                             <input
                                                                                 id="login-name"
                                                                                 class="form-control grow-text"
-                                                                                placeholder="Your GrowID Name *"
+                                                                                placeholder="Your SecretPS Name *"
                                                                                 name="growId"
                                                                                 type="text"
                                                                             />
@@ -132,7 +131,7 @@
                                                                             <input
                                                                                 id="password"
                                                                                 class="form-control grow-text"
-                                                                                placeholder="Your GrowID Password *"
+                                                                                placeholder="Your SecretPS Password *"
                                                                                 name="password"
                                                                                 type="password"
                                                                                 value=""
@@ -162,7 +161,7 @@
 <input
                                                                                 class="btn btn-lg btn-primary grow-button"
                                                         type="submit"
-                                                                                value="Don't have any GTPSID? Register here!"
+                                                                                value="Don't have any SecretPS GrowID? Register here!"
                                                                             />
 </form>
                       
