--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -161,7 +161,7 @@
 <input
                                                                                 class="btn btn-lg btn-primary grow-button"
                                                         type="submit"
-                                                                                value="Don't have any SecretPS GrowID? Register here!"
+                                                                                value="Don't have any GrowID? Register here!"
                                                                             />
 </form>
                       
