--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -90,7 +90,7 @@
                                                                 class="section-title center-align"
                                                             >
                                                                 <h2>
-                                                                    Welcome To SecretPS
+                                                                    Welcome To RealityPS
                                                                 </h2>
 
                                                             </div>
@@ -120,7 +120,7 @@
                                                                             <input
                                                                                 id="login-name"
                                                                                 class="form-control grow-text"
-                                                                                placeholder="Your SecretPS Name *"
+                                                                                placeholder="Your RealityPS Name *"
                                                                                 name="growId"
                                                                                 type="text"
                                                                             />
@@ -131,7 +131,7 @@
                                                                             <input
                                                                                 id="password"
                                                                                 class="form-control grow-text"
-                                                                                placeholder="Your SecretPS Password *"
+                                                                                placeholder="Your RealityPS Password *"
                                                                                 name="password"
                                                                                 type="password"
                                                                                 value=""
