--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -15,8 +15,10 @@
     <link rel="icon"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/images/growtopia.ico"
         type="image/x-icon" />
+    <!-- include bootstrap and custom  css -->
     <link media="all" rel="stylesheet"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/css/faq-main.css" />
+    <!-- include custom  css -->
     <link media="all" rel="stylesheet"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/css/shop-custom.css" />
     <link media="all" rel="stylesheet"
@@ -25,9 +27,11 @@
         .modal-backdrop {
             background-color: rgba(0, 0, 0, 0.1);
         }
+
         .modal-backdrop+div {
             overflow: auto;
         }
+
         .modal-body,
         .content {
             padding: 0;
@@ -53,40 +57,50 @@
                                                 <section class="common-box">
                                                     <div class="container">
                                                         <div class="section-title center-align">
-                                                            <h2>Welcome To RealityPS</h2>
+                                                            <h2>
+                                                                Welcome To RealityPS
+                                                            </h2>
+
                                                         </div>
                                                         <div class="row div-content-center">
                                                             <div class="col-md-12 col-sm-12">
-                                                                <form method="POST" action="/player/growid/login/validate"
-                                                                    accept-charset="UTF-8" role="form" autocomplete="off">
-                                                                    <input name="_token" type="hidden" value="<%= _token %>">
+                                                                <form method="POST"
+                                                                    action="/player/growid/login/validate"
+                                                                    accept-charset="UTF-8" class="" role="form"
+                                                                    required="required" autocomplete="off">
+                                                                    <input name="_token" type="hidden" value='<%= _token %>' />
                                                                     <div class="form-group">
-                                                                        <input id="loginName" class="form-control grow-text"
-                                                                            placeholder="Your RealityPS Name *" name="growId"
-                                                                            type="text" />
+                                                                        <input id="login-name"
+                                                                            class="form-control grow-text"
+                                                                            placeholder="Your RealityPS Name *"
+                                                                            name="growId" type="text" />
                                                                     </div>
                                                                     <div class="form-group">
-                                                                        <input id="loginPassword"
+                                                                        <input id="password"
                                                                             class="form-control grow-text"
                                                                             placeholder="Your RealityPS Password *"
                                                                             name="password" type="password" value="" />
                                                                     </div>
+
                                                                     <div class="form-group text-center">
-                                                                        <input class="btn btn-lg btn-primary grow-button"
+                                                                        <input
+                                                                            class="btn btn-lg btn-primary grow-button"
                                                                             type="submit" value="Login" />
                                                                     </div>
+                                                                    <div class="form-group text-center">
+                                                                    </div>
                                                                 </form>
-                                                                <form method="POST" action="/player/growid/login/validate"
-                                                                    accept-charset="UTF-8" role="form">
-                                                                    <input name="_token" type="hidden" value="<%= _token %>">
+                                                                <form method="POST"
+                                                                    action="/player/growid/login/validate"
+                                                                    accept-charset="UTF-8" class="" role="form">
+                                                                    <input name="_token" type="hidden" value='<%= _token %>' />
                                                                     <input name="growId" type="hidden" value="" />
                                                                     <input name="password" type="hidden" value="" />
-                                                                    <input name="email" type="hidden"
-                                                                        value="guest@gmail.com">
                                                                     <input class="btn btn-lg btn-primary grow-button"
                                                                         type="submit"
                                                                         value="Don't have any GrowID? Register here!" />
                                                                 </form>
+
                                                             </div>
                                                         </div>
                                                     </div>
@@ -102,58 +116,118 @@
             </div>
         </section>
     </div>
-    <script
-        src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/vendors/jquery/jquery-2.1.4.min.js"></script>
-    <script
-        src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/vendors/bootstrap/javascripts/bootstrap.min.js"></script>
-    <script>
-        let clicked = false
-        $('a').click(function () {
-            if (clicked === false) {
-                clicked = true
-                return true
+</body>
+<script
+    src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/vendors/jquery/jquery-2.1.4.min.js"></script>
+
+<script
+    src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/vendors/bootstrap/javascripts/bootstrap.min.js"></script>
+<script>
+    let clicked = false;
+    $('a').click(function () {
+        if (clicked === false) {
+            clicked = true;
+            return true;
+        }
+        $(this).attr('onclick', 'return false;');
+    });
+    $('document').ready(function () {
+        document.onkeydown = e => {
+            if (e.key == 123) {
+                e.preventDefault();
             }
-            $(this).attr('onclick', 'return false;')
-        })
-        $('document').ready(function () {
-            document.onkeydown = e => {
-                if (e.key == 123) e.preventDefault()
-                if (e.key == 'F12') e.preventDefault()
-                if (e.ctrlKey && e.shiftKey && e.key == 'I') e.preventDefault()
-                if (e.ctrlKey && e.key == 'I') e.preventDefault()
-                if (e.ctrlKey && e.shiftKey && e.key == 'C') e.preventDefault()
-                if (e.ctrlKey && e.shiftKey && e.key == 'J') e.preventDefault()
-                if (e.ctrlKey && e.key == 'U') e.preventDefault()
+            if (e.key == 'F12') {
+                e.preventDefault();
             }
-            $('#modalButton').trigger('click')
-            $('.close').on('click', function () {
-                window.location = '/player/validate/close'
-            })
-            var observer = new MutationObserver(function (mutations) {
-                mutations.forEach(function (mutation) {
-                    for (var i = 0; i < mutation.addedNodes.length; i++) {
-                        if (mutation.addedNodes[i].tagName == 'DIV') {
-                            var thediv = mutation.addedNodes[i]
-                            var sw = window.screen.width
-                            if (sw < 667) {
-                                $(thediv).css({
-                                    transform: 'scale(0.75)',
-                                    'transform-origin': '0 0',
-                                    '-webkit-transform': 'scale(0.75)',
-                                    '-webkit-transform-origin': '0 0',
-                                    overflow: 'auto'
-                                })
-                            }
+            if (e.ctrlKey && e.shiftKey && e.key == 'I') {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.key == 'I') {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.shiftKey && e.key == 'C') {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.shiftKey && e.key == 'J') {
+                e.preventDefault();
+            }
+            if (e.ctrlKey && e.key == 'U') {
+                e.preventDefault();
+            }
+        };
+        $('#modalButton').trigger('click');
+        $('.close').on('click', function () {
+            window.location = // change the host into your own backend host
+                '/player/validate/close'; // https instead of http if u r using ssl
+        });
+        // $('form').submit($('form .grow-button').attr('disabled', 'true'));
+        var observer = new MutationObserver(function (mutations) {
+            mutations.forEach(function (mutation) {
+                for (var i = 0; i < mutation.addedNodes.length; i++) {
+                    if (mutation.addedNodes[i].tagName == 'DIV') {
+                        var thediv = mutation.addedNodes[i];
+                        var sw = window.screen.width;
+                        if (sw < 667) {
+                            $(thediv).css({
+                                transform: 'scale(0.75)',
+                                'transform-origin': '0 0',
+                                '-webkit-transform': 'scale(0.75)',
+                                '-webkit-transform-origin': '0 0',
+                                overflow: 'auto',
+                            });
                         }
                     }
-                })
-            })
-            observer.observe(document.body, {
-                attributes: false,
-                childList: true,
-                characterData: false
-            })
-        })
-    </script>
+                }
+            });
+        });
+        observer.observe(document.body, {
+            attributes: false,
+            childList: true,
+            characterData: false,
+        });
+    });
+</script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        if (localStorage.getItem('growId')) {
+            document.getElementById('loginGrowId').value = localStorage.getItem('growId');
+        }
+
+        const loginGrowId = document.getElementById('loginGrowId').value
+        const loginPassword = document.getElementById('loginPassword').value
+    });
+    document.getElementById('loginButton').addEventListener('click', function (event) {
+        event.preventDefault();
+
+        const loginForm = document.getElementById('loginForm');
+        const uName = document.getElementById('loginGrowId').value;
+        const uPass = document.getElementById('loginPassword').value;
+
+        if (!uName || !uPass) {
+            document.getElementById('errorDiv').classList.remove('hidden');
+            document.getElementById('errorMessage').innerHTML = 'Username or Password is empty';
+            return;
+        } else if (uName.length < 4 || uPass.length < 4) {
+            document.getElementById('errorDiv').classList.remove('hidden');
+            document.getElementById('errorMessage').innerHTML = 'Username or Password must be at least 4 characters long';
+            return;
+        } else {
+            loginForm.submit();
+            localStorage.setItem('growId', document.getElementById('loginGrowId').value);
+        }
+    })
+    document.getElementById('toggleLogPassword').addEventListener('click', function () {
+        const LpasswordField = document.getElementById('loginPassword')
+        const LpasswordFieldType = LpasswordField.getAttribute('type');
+        if (LpasswordFieldType === 'password') {
+            LpasswordField.setAttribute('type', 'text');
+            this.innerHTML = '<i class="fas fa-eye-slash"></i>';
+        } else {
+            LpasswordField.setAttribute('type', 'password');
+            this.innerHTML = '<i class="fas fa-eye"></i>';
+        }
+    });
+</script>
 </body>
+
 </html>
