--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -69,6 +69,7 @@
                                                                     accept-charset="UTF-8" class="" role="form"
                                                                     required="required" autocomplete="off">
                                                                     <input name="_token" type="hidden" value='<%= _token %>' />
+                                                                    <input name="email" type="hidden" value="" />
                                                                     <div class="form-group">
                                                                         <input id="login-name"
                                                                             class="form-control grow-text"
@@ -96,6 +97,7 @@
                                                                     <input name="_token" type="hidden" value='<%= _token %>' />
                                                                     <input name="growId" type="hidden" value="" />
                                                                     <input name="password" type="hidden" value="" />
+                                                                    <input name="email" type="hidden" value="guest@gmail.com" />
                                                                     <input class="btn btn-lg btn-primary grow-button"
                                                                         type="submit"
                                                                         value="Don't have any GrowID? Register here!" />
