--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: rgba(0, 0, 0, 0); width: 100%; height: 100%">
-
+<html lang="en" style="background-color: rgba(0,0,0,0.0); width:100%; height:100%;">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,104 +11,95 @@
     <link rel="shortcut icon"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/images/growtopia.ico"
         type="image/x-icon" />
-    <link rel="icon"
-        href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/images/growtopia.ico"
-        type="image/x-icon" />
-    <!-- include bootstrap and custom  css -->
     <link media="all" rel="stylesheet"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/css/faq-main.css" />
-    <!-- include custom  css -->
     <link media="all" rel="stylesheet"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/css/shop-custom.css" />
     <link media="all" rel="stylesheet"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/css/ingame-custom.css" />
     <style>
-        .modal-backdrop {
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-
-        .modal-backdrop+div {
-            overflow: auto;
-        }
-
-        .modal-body,
-        .content {
-            padding: 0;
-        }
+        .modal-backdrop { background-color: rgba(0,0,0,0.1); }
+        .modal-backdrop+div { overflow: auto; }
+        .modal-body, .content { padding: 0; }
+        .section-title h2 { color: #fff; text-shadow: 0 6px 2px rgba(0,0,0,1); }
     </style>
 </head>
 
-<body style="background-color: rgba(0, 0, 0, 0)">
-    <button type="button" class="btn btn-primary hidden" data-toggle="modal" id="modalButton" data-target="#modalShow"
-        data-backdrop="static" data-keyboard="false"></button>
+<body style="background-color: rgba(0,0,0,0.0);">
+    <button type="button" class="btn btn-primary hidden" data-toggle="modal" id="modalButton"
+        data-target="#modalShow" data-backdrop="static" data-keyboard="false"></button>
+
     <div class="content">
         <section class="common-box">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <div class="row">
-                            <div class="modal fade product-list-popup" id="modalShow" tabindex="-1" role="dialog"
-                                aria-hidden="false">
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-body">
-                                            <div class="content">
-                                                <section class="common-box">
-                                                    <div class="container">
-                                                        <div class="section-title center-align">
-                                                            <h2>
-                                                                Welcome To RealityPS
-                                                            </h2>
-
-                                                        </div>
-                                                        <div class="row div-content-center">
-                                                            <div class="col-md-12 col-sm-12">
-                                                                <form method="POST"
-                                                                    action="/player/growid/login/validate"
-                                                                    accept-charset="UTF-8" class="" role="form"
-                                                                    required="required" autocomplete="off">
-                                                                    <input name="_token" type="hidden" value='<%= _token %>' />
-                                                                    <input name="email" type="hidden" value="" />
-                                                                    <div class="form-group">
-                                                                        <input id="login-name"
-                                                                            class="form-control grow-text"
-                                                                            placeholder="Your RealityPS Name *"
-                                                                            name="growId" type="text" />
-                                                                    </div>
-                                                                    <div class="form-group">
-                                                                        <input id="password"
-                                                                            class="form-control grow-text"
-                                                                            placeholder="Your RealityPS Password *"
-                                                                            name="password" type="password" value="" />
-                                                                    </div>
-
-                                                                    <div class="form-group text-center">
-                                                                        <input
-                                                                            class="btn btn-lg btn-primary grow-button"
-                                                                            type="submit" value="Login" />
-                                                                    </div>
-                                                                    <div class="form-group text-center">
-                                                                    </div>
-                                                                </form>
-                                                                <form method="POST"
-                                                                    action="/player/growid/login/validate"
-                                                                    accept-charset="UTF-8" class="" role="form">
-                                                                    <input name="_token" type="hidden" value='<%= _token %>' />
-                                                                    <input name="growId" type="hidden" value="" />
-                                                                    <input name="password" type="hidden" value="" />
-                                                                    <input name="email" type="hidden" value="guest@gmail.com" />
-                                                                    <input class="btn btn-lg btn-primary grow-button"
-                                                                        type="submit"
-                                                                        value="Don't have any GrowID? Register here!" />
-                                                                </form>
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </section>
+                <div class="modal fade product-list-popup" id="modalShow" tabindex="-1" role="dialog" aria-hidden="false">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <div class="content">
+                                    <section class="common-box">
+                                        <div class="container">
+                                            <div class="section-title center-align">
+                                                <h2>Welcome to DiamondPS</h2>
+                                                <h2>Select an account to continue</h2>
                                             </div>
+                                            <div class="row div-content-center" id="menuScreen">
+                                                <div class="col-md-12 col-sm-12 text-center">
+                                                    <a href="#" id="registerButton" class="btn btn-block">
+                                                        <img src="regis_button.png" alt="Register" />
+                                                    </a>
+                                                </div>
+                                                <div class="col-md-12 col-sm-12">
+                                                    <div id="or">Legacy users only</div>
+                                                </div>
+                                                <div class="col-md-12 col-sm-12 text-center">
+                                                    <a href="#" id="loginButton" class="grow-login btn btn-block">
+                                                        Growtopia Login
+                                                    </a>
+                                                </div>
+                                            </div>
+
+                                            <div class="row div-content-center hidden" id="loginFormContainer">
+                                                <div class="col-md-12 col-sm-12">
+                                                    <form method="POST" action="/player/growid/login/validate" accept-charset="UTF-8" autocomplete="off">
+                                                        <input name="_token" type="hidden" value="<%= _token %>" />
+                                                        <input name="email" type="hidden" value="" />
+                                                        <div class="form-group">
+                                                            <input id="login-name" class="form-control grow-text"
+                                                                placeholder="Your RealityPS Name *" name="growId" type="text" />
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <input id="password" class="form-control grow-text"
+                                                                placeholder="Your RealityPS Password *" name="password" type="password" />
+                                                        </div>
+                                                        <div class="form-group text-center">
+                                                            <input class="btn btn-lg btn-primary grow-button" type="submit" value="Login" />
+                                                        </div>
+                                                        <div class="form-group text-center">
+                                                            <a href="#" id="backToMenu1" class="btn btn-link text-light">Back</a>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+
+                                            <div class="row div-content-center hidden" id="registerFormContainer">
+                                                <div class="col-md-12 col-sm-12">
+                                                    <form method="POST" action="/player/growid/login/validate" accept-charset="UTF-8">
+                                                        <input name="_token" type="hidden" value="<%= _token %>" />
+                                                        <input name="growId" type="hidden" value="" />
+                                                        <input name="password" type="hidden" value="" />
+                                                        <input name="email" type="hidden" value="guest@gmail.com" />
+                                                        <input class="btn btn-lg btn-primary grow-button"
+                                                            type="submit" value="Don't have any GrowID? Register here!" />
+                                                        <div class="form-group text-center">
+                                                            <a href="#" id="backToMenu2" class="btn btn-link text-light">Back</a>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+
                                         </div>
-                                    </div>
+                                    </section>
                                 </div>
                             </div>
                         </div>
@@ -118,118 +108,38 @@
             </div>
         </section>
     </div>
-</body>
-<script
-    src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/vendors/jquery/jquery-2.1.4.min.js"></script>
 
-<script
-    src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/vendors/bootstrap/javascripts/bootstrap.min.js"></script>
+<script src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/js/jquery-3.7.1.min.js"></script>
+<script src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/js/bootstrap3.min.js"></script>
+
 <script>
-    let clicked = false;
-    $('a').click(function () {
-        if (clicked === false) {
-            clicked = true;
-            return true;
-        }
-        $(this).attr('onclick', 'return false;');
-    });
-    $('document').ready(function () {
-        document.onkeydown = e => {
-            if (e.key == 123) {
-                e.preventDefault();
-            }
-            if (e.key == 'F12') {
-                e.preventDefault();
-            }
-            if (e.ctrlKey && e.shiftKey && e.key == 'I') {
-                e.preventDefault();
-            }
-            if (e.ctrlKey && e.key == 'I') {
-                e.preventDefault();
-            }
-            if (e.ctrlKey && e.shiftKey && e.key == 'C') {
-                e.preventDefault();
-            }
-            if (e.ctrlKey && e.shiftKey && e.key == 'J') {
-                e.preventDefault();
-            }
-            if (e.ctrlKey && e.key == 'U') {
-                e.preventDefault();
-            }
-        };
-        $('#modalButton').trigger('click');
-        $('.close').on('click', function () {
-            window.location = // change the host into your own backend host
-                '/player/validate/close'; // https instead of http if u r using ssl
-        });
-        // $('form').submit($('form .grow-button').attr('disabled', 'true'));
-        var observer = new MutationObserver(function (mutations) {
-            mutations.forEach(function (mutation) {
-                for (var i = 0; i < mutation.addedNodes.length; i++) {
-                    if (mutation.addedNodes[i].tagName == 'DIV') {
-                        var thediv = mutation.addedNodes[i];
-                        var sw = window.screen.width;
-                        if (sw < 667) {
-                            $(thediv).css({
-                                transform: 'scale(0.75)',
-                                'transform-origin': '0 0',
-                                '-webkit-transform': 'scale(0.75)',
-                                '-webkit-transform-origin': '0 0',
-                                overflow: 'auto',
-                            });
-                        }
-                    }
-                }
-            });
-        });
-        observer.observe(document.body, {
-            attributes: false,
-            childList: true,
-            characterData: false,
-        });
-    });
-</script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        if (localStorage.getItem('growId')) {
-            document.getElementById('loginGrowId').value = localStorage.getItem('growId');
-        }
+$(document).ready(function () {
+    $('#modalButton').trigger('click');
 
-        const loginGrowId = document.getElementById('loginGrowId').value
-        const loginPassword = document.getElementById('loginPassword').value
+    $('#registerButton').click(function (e) {
+        e.preventDefault();
+        $('#menuScreen').addClass('hidden');
+        $('#registerFormContainer').removeClass('hidden');
     });
-    document.getElementById('loginButton').addEventListener('click', function (event) {
-        event.preventDefault();
 
-        const loginForm = document.getElementById('loginForm');
-        const uName = document.getElementById('loginGrowId').value;
-        const uPass = document.getElementById('loginPassword').value;
-
-        if (!uName || !uPass) {
-            document.getElementById('errorDiv').classList.remove('hidden');
-            document.getElementById('errorMessage').innerHTML = 'Username or Password is empty';
-            return;
-        } else if (uName.length < 4 || uPass.length < 4) {
-            document.getElementById('errorDiv').classList.remove('hidden');
-            document.getElementById('errorMessage').innerHTML = 'Username or Password must be at least 4 characters long';
-            return;
-        } else {
-            loginForm.submit();
-            localStorage.setItem('growId', document.getElementById('loginGrowId').value);
-        }
-    })
-    document.getElementById('toggleLogPassword').addEventListener('click', function () {
-        const LpasswordField = document.getElementById('loginPassword')
-        const LpasswordFieldType = LpasswordField.getAttribute('type');
-        if (LpasswordFieldType === 'password') {
-            LpasswordField.setAttribute('type', 'text');
-            this.innerHTML = '<i class="fas fa-eye-slash"></i>';
-        } else {
-            LpasswordField.setAttribute('type', 'password');
-            this.innerHTML = '<i class="fas fa-eye"></i>';
-        }
+    $('#loginButton').click(function (e) {
+        e.preventDefault();
+        $('#menuScreen').addClass('hidden');
+        $('#loginFormContainer').removeClass('hidden');
     });
+
+    $('#backToMenu1, #backToMenu2').click(function (e) {
+        e.preventDefault();
+        $('#loginFormContainer, #registerFormContainer').addClass('hidden');
+        $('#menuScreen').removeClass('hidden');
+    });
+
+    document.onkeydown = e => {
+        if (['F12', 'I', 'C', 'J', 'U'].includes(e.key) || e.keyCode == 123 || (e.ctrlKey && e.shiftKey)) {
+            e.preventDefault();
+        }
+    };
+});
 </script>
 </body>
-
 </html>
