--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -46,7 +46,7 @@
                                             <div class="row div-content-center" id="menuScreen">
                                                 <div class="col-md-12 col-sm-12 text-center">
                                                     <a href="#" id="registerButton" class="btn btn-block">
-                                                        <img src="public/regis_button.png" alt="Register" />
+                                                        <img src="../regis_button.png" alt="Register" />
                                                     </a>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
