--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -22,7 +22,7 @@
         .modal-backdrop+div { overflow: auto; }
         .modal-body, .content { padding: 0; }
         .section-title h2 { color: #fff; text-shadow: 0 6px 2px rgba(0,0,0,1); }
-
+        #or { text-decoration: none !important; color: #fff; font-weight: bold; margin: 10px 0; display: block; text-shadow: 0 2px 2px rgba(0,0,0,0.8); }
         #loginButton { display: inline-block; margin: 0 auto; }
         .modal-body { text-align: center; }
     </style>
