--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -92,7 +92,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <div id="or">Legacy users only</div>
+                                                    <div id="">Legacy users only</div>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12 text-center">
                                                     <a href="#" id="loginButton" class="grow-login btn btn-block">
