--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -91,8 +91,8 @@
                                                             alt="Register" />
                                                     </a>
                                                 </div>
-                                                <div class="col-md-12 col-sm-12">
-                                                    <div id="">Legacy users only</div>
+                                                <div class="col-md-4 col-sm-6 mx-auto text-center">
+                                                    <div id="or">Legacy users only</div>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12 text-center">
                                                     <a href="#" id="loginButton" class="grow-login btn btn-block">
@@ -118,7 +118,8 @@
                                                                 type="password" />
                                                         </div>
                                                         <div class="form-group text-center forgot-password">
-                                                            <a href="https://discord.gg/ZCQw89gahn" target="_blank">Need Help? Join our Discord!</a>
+                                                            <a href="https://discord.gg/ZCQw89gahn" target="_blank">Need
+                                                                Help? Join our Discord!</a>
                                                         </div>
                                                         <div class="form-group text-center">
                                                             <input class="btn btn-lg btn-primary grow-button"
