--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -91,7 +91,7 @@
                                                             alt="Register" />
                                                     </a>
                                                 </div>
-                                                <div class="col-md-12 col-sm-12 mx-auto text-center">
+                                                <div class="col-md-12 col-sm-12 text-center">
                                                     <div id="or">Legacy users only</div>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12 text-center">
