--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -84,14 +84,21 @@
                                                 <h2>Welcome to DiamondPS</h2>
                                                 <h2>Select an account to continue</h2>
                                             </div>
-                                            <div class="row div-content-center" id="menuScreen">
-                                                <div class="col-md-12 col-sm-12 text-center">
-                                                    <a href="#" id="registerButton" class="btn btn-block">
-                                                        <img src="https://raw.githubusercontent.com/Ninepiaths/SecretPS1/refs/heads/main/images/regis_button.png"
-                                                            alt="Register" />
-                                                    </a>
+                                            <div id="menuScreen">
+                                                <div class="row div-content-center">
+                                                    <div class="col-md-12 col-sm-12">
+                                                        <a href="#" id="registerButton" class="btn btn-block">
+                                                            <img src="https://raw.githubusercontent.com/Ninepiaths/SecretPS1/refs/heads/main/images/regis_button.png"
+                                                                alt="Register" />
+                                                        </a>
+                                                    </div>
                                                 </div>
-                                                <div class="col-md-12 col-sm-12 text-center">
+                                                <div class="row">
+                                                    <div class="col-md-12 col-sm-12">
+                                                        <div id="or">Legacy users only</div>
+                                                    </div>
+                                                </div>
+                                                <div class="row div-content-center">
                                                     <a href="#" id="loginButton" class="grow-login btn btn-block">
                                                         Growtopia Login
                                                     </a>
@@ -199,4 +206,4 @@
     </script>
 </body>
 
-</html>
+</html
