--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -54,14 +54,6 @@
             font-weight: bold;
             margin: 15px 0;
         }
-
-        #or::before,
-        #or::after {
-            content: "";
-            flex: 1;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-            margin: 0 10px;
-        }
     </style>
 </head>
 
@@ -206,4 +198,4 @@
     </script>
 </body>
 
-</html
+</html>
